--- a/README.org
+++ b/README.org
@@ -22,10 +22,11 @@ will return the position of the yellow bolt over character "n".
 
 To change the hat colors, set ~hatty-colors~.  This should be an
 association list mapping an identifier symbol to a string,
-representing a color valid in the SVG format.  This includes colour
-names like "red", "green", "magenta", as well as hex codes like
-"#aa7023".  ~hatty-colors~ may contain or exclude arbitrary colours,
-allowing you to remove, add or change the colors to your liking.
+representing a color.  This includes color names like "red", "green",
+"magenta", as well as hex codes like "#aa7023".  See
+~list-colors-display~ for available color names ~hatty-colors~ may
+contain or exclude arbitrary colours, allowing you to remove, add or
+change the colors to your liking.
 
 If you use a modus theme, the following will give the hats colors
 matching your theme:
