Lint with package-lint

--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,8 +1,9 @@
-* NEXT
+* NEXT (date?)
 - Make color specification the same as in emacs, rather than SVG.
 - Define user-facing variables with defcustom.
 - ~hatty-mode~ is now buffer-local.  Use ~global-hatty-mode~ to enable
   it globally.
+- Add autoload cookies for ~hatty-mode~ and ~global-hatty-mode~.
 
-* 0.1.0
+* 0.1.0 (date?)
 Initial release.
