--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,12 +1,12 @@
 * 0.2.2 [2024-09-04 Wed]
 - Fix rendering bug pertaining to the raise display property.
-- Decrease required emacs version to 26.1.
+- Decrease required Emacs version to 26.1.
 
 * 0.2.1 [2024-09-04 Wed]
 - Update documentation.
 
 * 0.2.0 [2024-08-31 Sat]
-- Color specification is now made according to emacs rules, not SVG.
+- Color specification is now made according to Emacs rules, not SVG.
 - Customization variables may now be customized using ~customize~.
 - ~hatty-mode~ is now buffer-local.  Use ~global-hatty-mode~ to enable
   it globally.
